# terminal

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 68b247b4a5dd_add_pre_strictness_flag_and_seen_.py  a84e6b57a109_add_catalyst_events_table.py  b507243bb597_add_triage_decisions_table.py  bafb81fa8ab8_initial_theses_thesis_outcomes.py  c15d6e76ea0f_add_position_marks_table_and_shadow_.py  fee6c336e464_add_portfolio_tables.py
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  broadcaster.py  build.py  copilot.py  grounding.py  schemas.py  tools.py
backend/app/api/: agent.py  autonomous.py  bars.py  chain.py  copilot.py  eval.py  health.py  llm.py  portfolio.py  prices.py  tickers.py
backend/app/core/: __init__.py  config.py  correlation.py  logging.py
backend/app/data/: __init__.py  alpaca.py  alpaca_bars_stream.py  base.py  cache.py  circuit_breaker.py  edgar.py  finnhub.py  interfaces.py  rate_limit.py  stubs.py  types.py  upsert.py  yfinance_provider.py
backend/app/discovery/: __init__.py  alpaca_news_stream.py  bus.py  catalyst_fetcher.py  catalyst_jobs.py  catalyst_scheduler.py  edgar_poller.py  models.py  reactive.py  triage.py  types.py  worker.py
backend/app/eval/: __init__.py  models.py  persistence.py  scoring.py
backend/app/llm/: __init__.py  (+5 more)
backend/scripts/: migrate_sqlite_to_pg.py
backend/tests/: conftest.py  test_alpaca_news_stream.py  test_alpaca_provider.py  test_autonomous_api.py  test_base_provider.py  test_cache.py  test_catalyst.py  test_circuit_breaker.py  test_config.py  test_copilot.py  test_copilot_endpoint.py  test_data_interfaces.py  test_discovery_bus.py  test_edgar_poller.py  test_edgar_provider.py  test_eval_api.py  test_eval_scoring.py  test_finnhub_provider.py  test_groq_provider.py  test_grounding.py  test_health.py  test_llm_providers.py  test_mtm.py  test_notify_discord.py  test_paper_engine.py  test_persistence.py  test_portfolio_api.py  test_portfolio_models.py  test_portfolio_seed.py  test_rate_limit.py  test_reactive.py  test_resolver.py  test_risk_engine.py  test_thesis_schema.py  test_tools.py  test_triage.py  test_worker.py  test_yfinance_provider.py
(+69 files in other folders)
