[project]
name = "terminal-backend"
version = "0.1.0"
description = "AI-native trading research terminal — backend (paper trading only, never real money)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "aiosqlite>=0.20",
    "redis>=5.1",
    "httpx>=0.27",
    "websockets>=14",
    "python-multipart>=0.0.12",
    # LLM SDKs — wired behind the LLMProvider interface (DESIGN.md §3)
    "google-genai>=0.3",
    "anthropic>=0.40",
    # Data providers (Phase 2 work, included now so we can use them tonight)
    "yfinance>=0.2.50",
    "edgartools>=3.0",
    # Numerical
    "pandas>=2.2",
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "respx>=0.21",
    "vcrpy>=6.0",
    "freezegun>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "B",         # bugbear
    "C4",        # comprehensions
    "UP",        # pyupgrade
    "SIM",       # simplify
    "RUF",
]
ignore = [
    "B008",      # function-call-in-default-argument (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "S101"]
"alembic/env.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["yfinance.*", "edgartools.*", "vcr.*", "google.genai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--strict-markers", "-ra"]
filterwarnings = [
    "ignore::DeprecationWarning:yfinance.*",
    "ignore::DeprecationWarning:pkg_resources.*",
]
